--- a/html/cmd.html
+++ b/html/cmd.html
@@ -38,7 +38,7 @@
       <!--footer-->
       <footer class="animated fadeIn">
          <p class="location" align="center"> 
-            <a href="C:\Users\User31\Desktop\SkyproFinal\index.html">Вернуться на главную</a>
+            <a href="C:\Users\User\Desktop\skypro-dzFinal\index.html">Вернуться на главную</a>
          </p>
          &copy; 2024. SkyPro
       </footer>
